# backend

./: .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: python-ci.yml
config/: production.json  testing.json
docker/: Dockerfile  production.yml  testing.yml
docker/nginx/: nginx.conf
migrations/: env.py
migrations/versions/: ac26aea26dd4_initial.py
python/: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
python/requirements/: dev.txt  prod.txt  test.txt
python/src/application/: responses.py
python/src/application/entities/: user.py
python/src/application/interfaces/: user_repo.py
python/src/application/services/: user.py
python/src/domain/: user.py
python/src/infrastructure/repositories/: postgres_objects.py  postgresrepo.py  user.py  user_mem.py
python/src/presentation/: cli.py
python/src/presentation/flask/: app.py  user.py
python/tests/: conftest.py
python/tests/application/: test_responses.py
python/tests/application/entities/: test_user.py
python/tests/application/services/: test_user.py
python/tests/application/services/user/: test_user_list.py
python/tests/domain/: test_user.py
python/tests/infrastructure/repositories/: test_user_mem.py
python/tests/presentation/flask/: test_user.py
requirements/: prod.txt
src/: logging_config.py
src/application/: responses.py
src/application/interfaces/: user_repo.py
src/application/requests/: user.py
src/application/serializers/: user.py
src/application/services/: user.py
src/infrastructure/repositories/: mongorepo.py  postgres_objects.py  postgresrepo.py  user_mem.py
src/presentation/: cli.py  wsgi.py
src/presentation/cli/: main.py
src/presentation/fastapi/: crud.py  (+4 more)
tests/: conftest.py
(+27 files in other folders)
