[project]
name = "backend"
version = "0.1.0"
authors = [
    {name = "Malick Abu Imran", email="daomalick225@gmail.com"},
]

[tool.mypy]
strict = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-v --tb=short"
python_files = ["test*.py"]
norecursedirs = [".git", "requirements*"]
markers = [
    "integration: integration tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "T201",  # flake8-print
    "UP",    # pyupgrade
]
