[project]
name = "backend"
version = "0.1.0"
authors = [
    {name = "Malick Abu Imran", email="daomalick225@gmail.com"},
]

[tool.mypy]
strict = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-v --tb=short"
python_files = ["test*.py"]
norecursedirs = [".git", "requirements*"]
markers = [
    "integration: integration tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I"]
